# PropAi

./: .gitignore  README.md  claude.md
ma_poc/: .gitignore  README.md  __init__.py  claude-scrapper-arch.md  claude_refactor.md  pyproject.toml  requirements.txt
ma_poc/discovery/: __init__.py  carry_forward.py  change_detector.py  contracts.py  dlq.py  frontier.py  scheduler.py  sitemap.py
ma_poc/docs/: BUG_HUNT_CHECKLIST.md  JUGNU_BASELINE.md  REFACTOR_BASELINE.md
ma_poc/extraction/: __init__.py  confidence.py  pipeline.py  tier1_api.py  tier2_jsonld.py  tier3_templates.py  tier4_llm.py  tier5_vision.py  vision_banner.py  vision_sample.py
ma_poc/fetch/: __init__.py  browser_pool.py  captcha_detect.py  conditional.py  contracts.py  fetcher.py  proxy_pool.py  rate_limiter.py  response_classifier.py  retry_policy.py  robots.py  stealth.py
ma_poc/frontend/: claude.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
ma_poc/llm/: __init__.py  anthropic.py  azure.py  base.py  factory.py  images.py  interaction_logger.py  openrouter.py
ma_poc/models/: __init__.py  extraction_result.py  scrape_event.py  scrape_profile.py  unit_record.py
ma_poc/observability/: __init__.py  cost_ledger.py  dlq_controller.py  event_ledger.py  events.py  replay_store.py  slo_watcher.py
ma_poc/pms/: contracts.py  detector.py  integration_helpers.py  resolver.py  scraper.py
ma_poc/reporting/: property_report.py  run_report.py  verdict.py
ma_poc/scraper/: __init__.py  browser.py  change_detection.py  fleet.py  proxy_manager.py
(+235 files in other folders)
